test_suite/tests/ui/identifier/variant_tuple.stderr
error: #[serde(variant_identifier)] may only contain unit variants
 --> $DIR/variant_tuple.rs:8:5
  |
8 |     B(u8, u8),
  |     ^^^^^^^^^

error: aborting due to previous error

